{
    "name": "MouseInput",
    "maps": [
        {
            "name": "Mouse",
            "id": "338a2ae0-d367-40a2-a526-4f53ce949223",
            "actions": [
                {
                    "name": "mouseClick",
                    "type": "Button",
                    "id": "64c173f8-4141-4d2a-ada7-ddf682999aac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "mousePosition",
                    "type": "Value",
                    "id": "6a3d9456-be12-456a-82aa-cc4cab8b27c3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "mouseScroll",
                    "type": "Value",
                    "id": "48a54e30-dcab-4663-b3ff-45952969453e",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "97be9887-8f68-4c8f-949b-2c7be4d75d5a",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "mouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4e4c15b-0e7b-425e-8f14-05acd6067afd",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "mousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7156d5d5-e2b5-4833-8997-ca33bf1e1004",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "mouseScroll",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}